DocumentSettings: plugins visibility fix

--- a/app/css/views/documentSettings.scss
+++ b/app/css/views/documentSettings.scss
@@ -24,4 +24,7 @@
 			display: none;
 		}
 	}
+	&_plugins-wrap--hidden {
+		display: none;
+	}
 }
